# mcp-template

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml  server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
tests/: test_server.py
